Adapt to latest Hibernate 8 changes.
Fix cglib proxy method filtering.
Select zero arguent method variants on MutationOrSelectionQuery instead of relying on first returned by getDeclaredMethods.

See: #4197